[package]
name = "tower-grpc"
version = "0.1.0"
authors = [
  "Carl Lerche <me@carllerche.com>",
  "Sean McArthur <sean@seanmonstar.com>",
  "Eliza Weisman <eliza@buoyant.io>",
]
license = "MIT"

[features]
default = ["protobuf", "tower-h2"]
protobuf = ["prost"]

[workspace]
members = [
  "tower-grpc-build",
  "tower-grpc-examples",
  "tower-grpc-interop",

  # For tests
  "tests/multifile",
  "tests/collide",
  "tests/name-case",
  "tests/unused-imports",
  "tests/uses_empty",
]

[dependencies]
bytes = "0.4.7"
futures = "0.1"
http = "0.1.14"
h2 = "0.1.11"
log = "0.4"
percent-encoding = "1.0.1"
tower-h2 = { git = "https://github.com/pantsbuild/tower-h2", rev = "44b0efb4983b769283efd5b2a3bc3decbf7c33de", optional = true }
tower-http = { git = "https://github.com/pantsbuild/tower-http", rev = "56049ee7f31d4f6c549f5d1d5fbbfd7937df3d00" }
tower-service = { git = "https://github.com/pantsbuild/tower", rev = "7b61c1fc1992c1df684fd3f179644ef0ca9bfa4c" }
tower-util = { git = "https://github.com/pantsbuild/tower", rev = "7b61c1fc1992c1df684fd3f179644ef0ca9bfa4c" }

# For protobuf
prost = { version = "0.4", optional = true }

[dev-dependencies]
env_logger = { version = "0.5", default-features = false }
tokio-connect = { git = "https://github.com/pantsbuild/tokio-connect", rev = "f7ad1ca437973d6e24037ac6f7d5ef1013833c0b" }
tokio-core = "0.1"

# For examples
prost = "0.4"
prost-derive = "0.4"

